<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/tall_tb"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sno"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_sname"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sex"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sage"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sbanji"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sdept"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/sc_sadress"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/addStuBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/addStu"
        android:textColor="#198"
        android:textSize="20dp" />
</LinearLayout>
