<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tablSC"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_sno"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_cno"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_cname"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_sc"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/sc_yn"
                />
        </TableRow>

    </TableLayout>
</LinearLayout>
