<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableCou"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/c_no"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/c_name"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/c_xingzhi"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/c_date"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:text="@string/c_place"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>
</LinearLayout>
