<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:paddingRight="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/m_snoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_sno"
            />

        <TextView
            android:id="@+id/m_nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_name" />

        <TextView
            android:id="@+id/m_sexTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_sex" />

        <TextView
            android:id="@+id/m_bjTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_bj" />

        <TextView
            android:id="@+id/m_ageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_age" />
        <TextView
            android:id="@+id/m_deptTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_dept" />
        <TextView
            android:id="@+id/m_adressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/m_adress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/m_snoTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />

        <TextView
            android:id="@+id/m_nameTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />

        <TextView
            android:id="@+id/m_sexTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />

        <TextView
            android:id="@+id/m_bjTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />

        <TextView
            android:id="@+id/m_ageTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />
        <TextView
            android:id="@+id/m_deptTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />
        <TextView
            android:id="@+id/m_adressTVWT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
             />
    </LinearLayout>
</LinearLayout>
