<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#baba"
    >


    <LinearLayout
        android:id="@+id/mPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >



        <TextView
            android:id="@+id/mPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/moff"
            android:text="@string/m_page"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/clPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/addoff"
            android:text="@string/cl_page"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/couPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/couPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/courseoff"
            android:gravity="center"
            android:text="@string/cou_page" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/scoreoff"
            android:gravity="center"
            android:text="@string/sc_page" />
    </LinearLayout>
</LinearLayout>
