<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#baba"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/TmPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TmPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/moff"
            android:text="@string/m_page"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TmanagePage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/TmanagePage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/manageoff"
            android:text="@string/Tmana_page"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/TallPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/TallPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/alloff"
            android:gravity="center"
            android:text="@string/Tall_page" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/TputPage_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TputPage_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableTop="@mipmap/scoreoff"
            android:gravity="center"
            android:text="@string/Tput_page" />
    </LinearLayout>
</LinearLayout>
